# samma-suit

./: .gitignore  LICENSE  README.md  Your_agent_has_no_armor.md  pyproject.toml
.github/: FUNDING.yml
docs/: CNAME  DEPLOY_DIRECTIVE.md  DOORMAN_Eight_Layer_Armor_Spec.docx  DOORMAN_IP_Strategy.md  LAUNCH_COPY.md  SammaSuit_IP_Strategy.md  chat-ux-secbar-heartbeat.md  cheatsheet.html  dashboard.html  doorman_architecture.mermaid  doorman_landing.html  doorman_manifesto.md  doorman_sutra_integration.md  getting-started.html  index.html  privacy.html  sammasuit_architecture.mermaid  sammasuit_landing.html  sammasuit_manifesto.md  sammasuit_sutra_integration.md  skills-cheatsheet.html  telegram-e2e-slack-adapter.md  terms.html
examples/: fastapi_demo.py
samma/: __init__.py  __main__.py  cli.py  exceptions.py  types.py
samma/bodhi/: __init__.py  base.py
samma/dharma/: __init__.py  config.py  decorators.py  dependencies.py  permissions.py  policy.py  roles.py
samma/fastapi/: __init__.py  integration.py
samma/karma/: __init__.py  base.py
samma/metta/: __init__.py  base.py
samma/nirvana/: __init__.py  base.py
samma/sangha/: __init__.py  base.py  scanner.py
samma/sila/: __init__.py  base.py
samma/sutra/: __init__.py  config.py  middleware.py  origin_validator.py  rate_limiter.py  tls_checker.py  websocket_auth.py
tests/: conftest.py  test_cli.py  test_dharma_permissions.py  test_dharma_policy.py  test_integration.py  test_sutra_middleware.py  test_sutra_rate_limiter.py
